--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
 body{
-  background-color: tan;
+  background-color: #dac292;
 }
 
 h1{
   font-size: 35px;
   font-family: 'times new roman';
-  color: darkolivegreen;
+  color: #b9936c;
+  position: center;
+}
+
+tbody .element{
+  background-color: #e6e2d3;
+  position: center;
 }
