--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body{
   background-color: #dac292;
+  margin: auto;
 }
 
 h1{
@@ -14,6 +15,8 @@ tbody{
   position: 0 auto;
   column-width: auto;
   height: 20px;
+  margin: auto;
+  text-align:center;
 }
 
 head{
