--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ h1{
 
 h2{
   font-size: 24px;
-    font-family: 'comic sans';
+    font-family: 'comic sans MS';
   position: center;
   margin: 0 auto;
 }
