--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ h1{
 h2{
   font-size: 24px;
     font-family: 'comic sans MS';
-  position: center;
-  margin: 0 auto;
+   margin: 0 auto;
+   color: brown;
 }
 
 tbody{
