--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,7 @@ table{
   margin-left: 15%;
   margin-right: 15%;
 }
+
+.header{
+  background-image: url(https://github.com/sweeper2311/sweeper2311.github.io/blob/main/head_background.png);
+}
