--- a/styles.css
+++ b/styles.css
@@ -38,5 +38,5 @@ table{
 }
 
 .header{
-  background-image: url(https://github.com/sweeper2311/sweeper2311.github.io/blob/main/head_background.png);
+  background-image: url(head_background.png);
 }
