--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ table{
   margin-right: 15%;
 }
 
-#header{
+.header{
   background-image: url(head_background.png);
   height:fit-content;
   width:auto;
