--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,6 @@ table{
 
 .header{
   background-image: url(head_background.png);
-  height:auto;
-  width:auto;
+  background-size:100% 100%;
+  background-repeat: no-repeat;
 }
