--- a/styles.css
+++ b/styles.css
@@ -41,4 +41,5 @@ table{
   background-image: url(head_background.png);
   background-size:100% 100%;
   background-repeat: no-repeat;
+  background-color: white;
 }
