--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h1{
   font-family: 'times new roman';
   color: #b9936c;
   position: center;
-  margin: 0 auto;
+  margin: auto;
   text-align: center;
   height: fit-content;
 }
