--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body{
 h1{
   font: size 100px;
   font-family: 'times new roman';
-  color: #b9936c;
+  color: #5C4033;
   position: center;
   margin: auto;
   text-align: center;
