--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ h1{
   display: flex;
   font-size:  60px;
   font-family: 'times new roman';
-  color: #5C4033;
+  color: #452e23;
   position: center;
   margin: auto;
   text-align: center;
