--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ h1{
   text-align: center;
   align-items: center;
   justify-content: center;
+  height: 450px;
   
 }
 
@@ -43,7 +44,7 @@ table{
 
 .header{
   background-image: url(head_background.png);
-  background-size:auto 250px;
+  background-size:auto 450px;
   background-repeat: no-repeat;
   background-color: white;
   opacity: 35%;
